...
                android:layout_weight="1"
                android:text="Jimmy"
                android:textColor="@color/ToolbarColor"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Yo, that was lit"
                android:textColor="@color/PostColor"
                android:textSize="18sp" />
...
